maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def aux():Boolean {var b = false;avance();return auxaux() != -1}
                                 ^Escaper:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def aux():Boolean {var b = false;avance();return auxaux() != -1}
                                          ^